implemented jwt authentication

--- a/Employee-Operations/src/main/resources/application.properties
+++ b/Employee-Operations/src/main/resources/application.properties
@@ -11,3 +11,4 @@ server.port= 9191
 spring.cache.cache-names=employees
 spring.cache.caffeine.spec=maximumSize=500, expireAfterAccess=60m
 server.error.include-message = always
+jwt.secret = secretkey123
