--- a/Employee-Operations/src/main/resources/application.properties
+++ b/Employee-Operations/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url= jdbc:mysql://localhost:3306/employee
 spring.datasource.username= root
 spring.datasource.password= root
 spring.jpa.show-sql= true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 server.port= 9191
 #spring.security.user.name=user
